# lora-radio

./: .gitignore  Cargo.toml  README.md  deploy.sh
clue/: Cargo.toml  memory.x
clue/.cargo/: config.toml
clue/src/: display.rs  error.rs  i2c.rs  led.rs  lora.rs  main.rs  soil.rs  usb_serial.rs
pi/: Cargo.toml  sync.sh
pi/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: error.rs  main.rs  panic.rs  usb_serial.rs
