[package]
authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "planter-basic"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.3"
#panic-halt = "0.2"
embedded-hal = "0.2"
nrf52840-hal = "0.16"
dwt-systick-monotonic = "1.1"

display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
embedded-layout = "0.2.0"
tinybmp = "0.4.0"
st7789 = "0.7.0"

usb-device = "0.2.9"
usbd-serial = "0.1.1"

heapless = "0.7.16"

profont = "0.6.1"

sx127x_lora = "0.3.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "planter-basic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
