[package]
authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "planter-basic"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.3"
#panic-halt = "0.2"
embedded-hal = "0.2"
nrf52840-hal = "0.16"
dwt-systick-monotonic = "1.1"

display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
embedded-layout = "0.2.0"
tinybmp = "0.4.0"
st7789 = "0.7.0"

usb-device = "0.2.9"
usbd-serial = "0.1.1"

heapless = "0.7.16"

profont = "0.6.1"

sx127x_lora = "0.3.1"

postcard = "1.0.1"
serde = { version = "1.0.147", default-features = false }
shared = { path = "../shared/", default-features = false }

# this lets you use `cargo fix`!
[[bin]]
name = "planter-basic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
