[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.2"
embedded-hal = "0.2.7"
sx127x_lora = "0.3.1"
rppal = "0.14.0"

heapless = "0.7.16"
postcard = { version = "1.0.2", features = [
  "alloc",
  "postcard-derive",
  "use-std",
], default-features = false }
serde = "1.0.147"
shared = { path = "../shared/"  }

uom = { version = "0.33.0", default-features = false, features = [
  "f32",
  "u16",
  "u32",
  "si",
  "std",
] }