[package]
name = "shared"
version = "0.1.0"
edition = "2021"


[dependencies]
heapless = { version = "0.7.15", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"], default-features = false }
uom = { version = "0.33.0", default-features = false, features = [
  "f32",
  "u16",
  "si",
  "use_serde",
  "u32",
] }

[features]
std = []
default = ["std"]